// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Case Summary Adapter should map additionalFields data values when choices are provided 1`] = `
{
  "actions": undefined,
  "additionalFields": [
    {
      "choices": [
        {
          "label": "TestA text",
          "value": "TESTA",
        },
        {
          "label": "TestB text",
          "value": "TESTB",
        },
      ],
      "label": "Test field",
      "value": "TestB text",
    },
  ],
  "case": {
    "created": "03/02/2019",
    "deadLineExtensions": [],
    "deadline": "01/01/2020",
    "received": "01/01/2019",
  },
  "deadlines": [
    {
      "label": "MOCK_STAGETYPE",
      "value": "01/01/2019",
    },
    {
      "label": "MOCK_STAGETYPE",
      "value": "06/01/2019",
    },
    {
      "label": "MOCK_STAGETYPE",
      "value": "01/01/2020",
    },
  ],
  "deadlinesEnabled": true,
  "previousCase": {
    "reference": "__previousCaseReference__",
    "stageUuid": "__previousCaseStageUUID__",
    "uuid": "__previousCaseUuid__",
  },
  "primaryCorrespondent": {
    "address": {
      "address1": "__address1__",
      "address2": "__address2__",
      "address3": "__address3__",
      "country": "__country__",
      "postcode": "__postcode__",
    },
    "fullname": "Test Correspondent",
  },
  "primaryTopic": "Topic A",
  "stages": [
    {
      "assignedTeam": "MOCK_TEAM",
      "assignedUser": "MOCK_USER",
      "stage": "MOCK_STAGETYPE",
    },
  ],
  "type": "case",
}
`;

exports[`Case Summary Adapter should map additionalFields data values when choices are provided as list name 1`] = `
{
  "actions": undefined,
  "additionalFields": [
    {
      "choices": [
        {
          "label": "TestA text",
          "value": "TESTA",
        },
        {
          "label": "TestB text",
          "value": "TESTB",
        },
      ],
      "label": "Test field",
      "value": "TestB text",
    },
  ],
  "case": {
    "created": "03/02/2019",
    "deadLineExtensions": [],
    "deadline": "01/01/2020",
    "received": "01/01/2019",
  },
  "deadlines": [
    {
      "label": "MOCK_STAGETYPE",
      "value": "01/01/2019",
    },
    {
      "label": "MOCK_STAGETYPE",
      "value": "06/01/2019",
    },
    {
      "label": "MOCK_STAGETYPE",
      "value": "01/01/2020",
    },
  ],
  "deadlinesEnabled": true,
  "previousCase": {
    "reference": "__previousCaseReference__",
    "stageUuid": "__previousCaseStageUUID__",
    "uuid": "__previousCaseUuid__",
  },
  "primaryCorrespondent": {
    "address": {
      "address1": "__address1__",
      "address2": "__address2__",
      "address3": "__address3__",
      "country": "__country__",
      "postcode": "__postcode__",
    },
    "fullname": "Test Correspondent",
  },
  "primaryTopic": "Topic A",
  "stages": [
    {
      "assignedTeam": "MOCK_TEAM",
      "assignedUser": "MOCK_USER",
      "stage": "MOCK_STAGETYPE",
    },
  ],
  "type": "case",
}
`;

exports[`Case Summary Adapter should not show deadlines when deadlines are disabled 1`] = `
{
  "actions": undefined,
  "additionalFields": [
    {
      "choices": undefined,
      "label": "Test field",
      "value": "TEST",
    },
    {
      "choices": undefined,
      "label": "Test additional field date",
      "value": "01/01/2020",
    },
  ],
  "case": {
    "created": "03/02/2019",
    "deadLineExtensions": [],
    "deadline": "01/01/2020",
    "received": "01/01/2019",
  },
  "deadlines": null,
  "deadlinesEnabled": false,
  "previousCase": {
    "reference": "__previousCaseReference__",
    "stageUuid": "__previousCaseStageUUID__",
    "uuid": "__previousCaseUuid__",
  },
  "primaryCorrespondent": {
    "address": {
      "address1": "__address1__",
      "address2": "__address2__",
      "address3": "__address3__",
      "country": "__country__",
      "postcode": "__postcode__",
    },
    "fullname": "Test Correspondent",
  },
  "primaryTopic": "Topic A",
  "stages": [
    {
      "assignedTeam": "MOCK_TEAM",
      "assignedUser": "MOCK_USER",
      "stage": "MOCK_STAGETYPE",
    },
  ],
  "type": "case",
}
`;

exports[`Case Summary Adapter should not show deadlines when summary deadlines are disabled 1`] = `
{
  "actions": undefined,
  "additionalFields": [
    {
      "choices": undefined,
      "label": "Test field",
      "value": "TEST",
    },
    {
      "choices": undefined,
      "label": "Test additional field date",
      "value": "01/01/2020",
    },
  ],
  "case": {
    "created": "03/02/2019",
    "deadLineExtensions": [],
    "deadline": "01/01/2020",
    "received": "01/01/2019",
  },
  "deadlines": null,
  "deadlinesEnabled": true,
  "previousCase": {
    "reference": "__previousCaseReference__",
    "stageUuid": "__previousCaseStageUUID__",
    "uuid": "__previousCaseUuid__",
  },
  "primaryCorrespondent": {
    "address": {
      "address1": "__address1__",
      "address2": "__address2__",
      "address3": "__address3__",
      "country": "__country__",
      "postcode": "__postcode__",
    },
    "fullname": "Test Correspondent",
  },
  "primaryTopic": "Topic A",
  "stages": [
    {
      "assignedTeam": "MOCK_TEAM",
      "assignedUser": "MOCK_USER",
      "stage": "MOCK_STAGETYPE",
    },
  ],
  "type": "case",
}
`;

exports[`Case Summary Adapter should populate fields when choices have nested options 1`] = `
{
  "actions": undefined,
  "additionalFields": [
    {
      "choices": undefined,
      "label": "Test field",
      "value": "TEST",
    },
    {
      "choices": undefined,
      "label": "Test additional field date",
      "value": "01/01/2020",
    },
    {
      "choices": null,
      "label": "Topic 22",
      "value": "mock-value-2",
    },
  ],
  "case": {
    "created": "03/02/2019",
    "deadLineExtensions": [],
    "deadline": "01/01/2020",
    "received": "01/01/2019",
  },
  "deadlines": [
    {
      "label": "MOCK_STAGETYPE",
      "value": "01/01/2019",
    },
    {
      "label": "MOCK_STAGETYPE",
      "value": "06/01/2019",
    },
    {
      "label": "MOCK_STAGETYPE",
      "value": "01/01/2020",
    },
  ],
  "deadlinesEnabled": true,
  "previousCase": undefined,
  "primaryCorrespondent": {
    "address": {
      "address1": "__address1__",
      "address2": "__address2__",
      "address3": "__address3__",
      "country": "__country__",
      "postcode": "__postcode__",
    },
    "fullname": "Test Correspondent",
  },
  "primaryTopic": "Topic A",
  "stages": [
    {
      "assignedTeam": "MOCK_TEAM",
      "assignedUser": "MOCK_USER",
      "stage": "MOCK_STAGETYPE",
    },
  ],
  "type": "case",
}
`;

exports[`Case Summary Adapter should transform actions data in case summary data 1`] = `
{
  "actions": [
    {
      "items": [
        {
          "complexCase": "Yes",
          "dateSentRMS": "26/10/2021",
          "note": "asdcasdc",
          "officer": "User Name",
          "officerDirectorate": "HMPO Acceptance Team",
          "outcome": "Complaint upheld",
          "status": "Yes",
          "title": "Internal Review",
        },
        {
          "complexCase": "Yes",
          "dateSentRMS": "12/10/2021",
          "note": "sdcasdc",
          "officer": null,
          "officerDirectorate": null,
          "outcome": "Complaint upheld",
          "status": "Yes",
          "title": "Court of Appeal",
        },
        {
          "complexCase": "Yes",
          "dateSentRMS": "26/10/2021",
          "note": "asdfasdf",
          "officer": null,
          "officerDirectorate": null,
          "outcome": "Decision upheld",
          "status": "Yes",
          "title": "First Tier Tribunal",
        },
        {
          "complexCase": "Yes",
          "dateSentRMS": "12/10/2021",
          "note": "asdcasd",
          "officer": null,
          "officerDirectorate": null,
          "outcome": "Decision upheld",
          "status": "Yes",
          "title": "Court of Appeal",
        },
        {
          "complexCase": "Yes",
          "dateSentRMS": "12/10/2021",
          "note": "sdcasdc",
          "officer": null,
          "officerDirectorate": null,
          "outcome": "Decision upheld",
          "status": "Yes",
          "title": "Court of Appeal",
        },
      ],
      "title": "Appeals",
      "type": "appeals",
    },
    {
      "items": {
        "caseActionData": {
          "appeals": [
            {
              "actionType": "APPEAL",
              "appealOfficerData": "{"IROfficerName": "638b31bc-6004-4f51-8394-45c3141e1f8a", "IROfficerDirectorate": "FOI_DIRECTORATE_HMPO_ACCEPTANCE_TEAMS"}",
              "caseTypeActionLabel": "Internal Review",
              "caseTypeActionUuid": "f2b625c9-7250-4293-9e68-c8f515e3043d",
              "complexCase": "Yes",
              "dateSentRMS": "2021-10-26",
              "note": "asdcasdc",
              "outcome": "ComplaintUpheld",
              "status": "Complete",
              "uuid": "72fd3cf4-f15a-4c20-90d4-90d1a663e2f5",
            },
            {
              "actionType": "APPEAL",
              "appealOfficerData": null,
              "caseTypeActionLabel": "Court of Appeal",
              "caseTypeActionUuid": "f84262c4-3b9e-4d1c-83c4-2ceacce5851d",
              "complexCase": "Yes",
              "dateSentRMS": "2021-10-12",
              "note": "sdcasdc",
              "outcome": "ComplaintUpheld",
              "status": "Complete",
              "uuid": "e2e033ef-a819-4ea8-b793-aa1b9eadf3e2",
            },
            {
              "actionType": "APPEAL",
              "appealOfficerData": null,
              "caseTypeActionLabel": "First Tier Tribunal",
              "caseTypeActionUuid": "e8313044-d0b1-4510-96e4-17af7fdaf754",
              "complexCase": "Yes",
              "dateSentRMS": "2021-10-26",
              "note": "asdfasdf",
              "outcome": "DecisionUpheld",
              "status": "Complete",
              "uuid": "f5868426-fdaa-4148-89ba-aa93c6989919",
            },
            {
              "actionType": "APPEAL",
              "appealOfficerData": null,
              "caseTypeActionLabel": "Court of Appeal",
              "caseTypeActionUuid": "f84262c4-3b9e-4d1c-83c4-2ceacce5851d",
              "complexCase": "Yes",
              "dateSentRMS": "2021-10-12",
              "note": "asdcasd",
              "outcome": "DecisionUpheld",
              "status": "Complete",
              "uuid": "50792f80-3f74-4eab-be86-a96e0e0749da",
            },
            {
              "actionType": "APPEAL",
              "appealOfficerData": null,
              "caseTypeActionLabel": "Court of Appeal",
              "caseTypeActionUuid": "f84262c4-3b9e-4d1c-83c4-2ceacce5851d",
              "complexCase": "Yes",
              "dateSentRMS": "2021-10-12",
              "note": "sdcasdc",
              "outcome": "DecisionUpheld",
              "status": "Complete",
              "uuid": "5fcad74b-3577-49eb-893d-5923c771c2f4",
            },
          ],
          "extensions": [
            {
              "actionType": "EXTENSION_OUT",
              "caseTypeActionLabel": "PIT Extension",
              "caseTypeActionUuid": "dd84d047-853b-428a-9ed7-94601623f344",
              "note": "Whatever you want to write here",
              "originalDeadline": "2021-11-24",
              "updatedDeadline": "2021-11-24",
              "uuid": "8ffa52b9-1e31-4412-ac50-ce086cec1b51",
            },
          ],
        },
        "caseTypeActionData": [
          {
            "props": "{}",
            "uuid": "f84262c4-3b9e-4d1c-83c4-2ceacce5851d",
          },
          {
            "props": "{}",
            "uuid": "e8313044-d0b1-4510-96e4-17af7fdaf754",
          },
          {
            "props": "{"appealOfficerData":{"officer":{"choices":"FAKE_USERS","value":"IROfficerName"},"directorate":{"choices":"FAKE_TEAMS","value":"IROfficerDirectorate"}}}",
            "uuid": "f2b625c9-7250-4293-9e68-c8f515e3043d",
          },
        ],
      },
      "title": "Extensions",
      "type": "extensions",
    },
  ],
  "additionalFields": [],
  "case": {
    "created": "03/02/2019",
    "deadLineExtensions": [],
    "deadline": null,
    "received": "01/01/2019",
  },
  "deadlines": [],
  "deadlinesEnabled": true,
  "previousCase": undefined,
  "primaryCorrespondent": null,
  "primaryTopic": null,
  "stages": [],
  "type": "case",
}
`;

exports[`Case Summary Adapter should transform fully populated case summary data 1`] = `
{
  "actions": undefined,
  "additionalFields": [
    {
      "choices": undefined,
      "label": "Test field",
      "value": "TEST",
    },
    {
      "choices": undefined,
      "label": "Test additional field date",
      "value": "01/01/2020",
    },
    {
      "choices": undefined,
      "label": "Test additional field checkbox",
      "value": "this, is, a, test",
    },
  ],
  "case": {
    "created": "03/02/2019",
    "deadLineExtensions": [],
    "deadline": "01/01/2020",
    "received": "01/01/2019",
  },
  "deadlines": [
    {
      "label": "MOCK_STAGETYPE",
      "value": "01/01/2019",
    },
    {
      "label": "MOCK_STAGETYPE",
      "value": "06/01/2019",
    },
    {
      "label": "MOCK_STAGETYPE",
      "value": "01/01/2020",
    },
  ],
  "deadlinesEnabled": true,
  "previousCase": {
    "reference": "__previousCaseReference__",
    "stageUuid": "__previousCaseStageUUID__",
    "uuid": "__previousCaseUuid__",
  },
  "primaryCorrespondent": {
    "address": {
      "address1": "__address1__",
      "address2": "__address2__",
      "address3": "__address3__",
      "country": "__country__",
      "postcode": "__postcode__",
    },
    "email": "test@test.com",
    "fullname": "Test Correspondent",
    "telephone": "11111111111",
  },
  "primaryTopic": "Topic A",
  "stages": [
    {
      "assignedTeam": "MOCK_TEAM",
      "assignedUser": "MOCK_USER",
      "stage": "MOCK_STAGETYPE",
    },
  ],
  "type": "case",
}
`;

exports[`Case Summary Adapter should transform minimal case summary data 1`] = `
{
  "actions": undefined,
  "additionalFields": [],
  "case": {
    "created": "03/02/2019",
    "deadLineExtensions": [],
    "deadline": null,
    "received": "01/01/2019",
  },
  "deadlines": [],
  "deadlinesEnabled": true,
  "previousCase": undefined,
  "primaryCorrespondent": null,
  "primaryTopic": null,
  "stages": [],
  "type": "case",
}
`;
